--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,10 +41,6 @@
   });
 </script>
 
-<script src='/client/app.js'></script>
-<script src='/client/link.js'></script>
-<script src='/client/links.js'></script>
-<script src='/client/linkView.js'></script>
-<script src='/client/linksView.js'></script>
-<script src='/client/createLinkView.js'></script>
-<script src='/client/router.js'></script>
+<% for (var i = 0; i < scripts.length; i++ ) { %>
+    <script src = "<%= scripts[i] %>" ></script>
+<%}%>
