refactored index file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,6 @@
   });
 </script>
 
-<% for (var i = 0; i < scripts.length; i++ ) { %>
-    <script src = "<%= scripts[i] %>" ></script>
-<%}%>
+<% for ( var i = 0; i < scripts.length; i++ ) { %>
+    <script src = '<%= scripts[i] %>' ></script>
+<% } %>
